--- a/index.html
+++ b/index.html
@@ -208,8 +208,9 @@
   <section class="hero is-small is-black has-text-centered">
     <div class="hero-body">
       <div class="container is-max-desktop">
-        <div class="container pt-6 pb-6"> <h1 class="title is-spaced is-size-2 is-size-3-mobile">Reserve your username before it's gone to claim your early community access</h1>
-          <h2 class="subtitle has-text-grey-light is-size-6">We are continously opening up new slots for our beta and upcoming community launch</h2></div>
+        <div class="container pt-6 pb-6">        <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Reserve your username before it's gone to claim your early community access</h4>
+          <p class="subtitle has-text-grey-light is-size-6">We are continously opening up new slots for our beta and upcoming community launch</p>
+     </div>
             <div class="pt-5 container"
             ><div class="field has-addons is-justify-content-center">
               <p class="control">
@@ -234,7 +235,7 @@
   </section>
   <footer class="section has-background-black is-small has-text-centered">
     <div class="container"><a class="logo" href="/"><img src="assets/logos/dataset-logo-light.svg" alt="Dataset | The new standard for your datasets 🚀" style="color:white;" height="48"></a>
-      <h2 class="subtitle mt-2 is-size-5-desktop has-text-grey-light">Follow us to get the latest news</h2>
+      <p class="subtitle has-text-grey-light is-size-6">Follow us to get the latest news</p>
       <a href="https://twitter.com/datasetHQ" target="_blank" class="icon-button twitter"><i class="fab fa-twitter"></i><span></span></a>
       <!-- <a href="#" target="_blank" class="icon-button linkedin"><i class="fab fa-linkedin"></i><span></span></a> -->
       <!-- <a href="#" target="_blank" class="icon-button medium"><i class="fab fa-medium"></i><span></span></a> -->
