--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
   <section class="hero is-small is-black has-text-centered">
     <div class="hero-body">
       <div class="container is-max-desktop">
-        <div class="container pt-6 pb-6">        <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Reserve your username before it's gone to claim your early community access</h4>
-          <p class="subtitle has-text-grey-light is-size-6">We are continously opening up new slots for our beta and upcoming community launch</p>
+        <div class="container pt-6 pb-6"><h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Reserve your username before it's gone to claim your early community access</h4>
+          <p class="subtitle has-text-grey-light is-size-4 is-size-5-mobile">We are continously opening up new slots for our beta and upcoming community launch</p>
      </div>
             <div class="pt-5 container"
             ><div class="field has-addons is-justify-content-center">
