--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
       <div class="navbar-menu">
         <div class="navbar-end">
           <div class="navbar-item">
+            <a class="button is-primary is-outlined" href="blog">Blog</a>
+          </div>
+          <div class="navbar-item">
             <a class="button is-primary is-outlined" href="https://app.dataset.at/auth/login" target="_blank">Login</a>
           </div>
           <div class="navbar-item"><a class="button is-primary early-access-button">Get early access</a></div>
@@ -53,6 +56,8 @@
   <section class="hero is-black is-fullheight has-text-centered">
     <div class="hero-body">
       <div class="container is-max-desktop">
+        <div id="dib-posts"></div>
+
             <h1 class="title is-spaced is-size-1-desktop is-size-2-tablet is-size-3-mobile squeezed">The new standard for <br /> <span class="word"></span> <span class="gradient-text">datasets</span></h1>
             <h2 class="subtitle has-text-grey-light is-size-4 is-size-5-mobile">Dataset.at is the next-generation data workspace for professionals and teams.
             </h2>
@@ -244,7 +249,10 @@
       <p class="is-size-8-desktop has-text-grey-light">© Dataset 2022</h2>
   </footer>
   <script src="js/script.js"></script>
-
+  <script>
+    var dib_id = '570597ea-f454-4976-b814-328197de7e37';
+    </script>
+    <script src="https://io.dropinblog.com/js/embed.js"></script>
 </body>
 
 </html>
