Design to cookie banner

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <a href="mailto:philip@dataset.at" target="_blank" class="icon-button email"><i class="far fa-envelope"></i><span></span></a>
       <p class="is-size-8-desktop has-text-grey-light">© Dataset 2022</h2>
   </footer>
-  <script src="https://dataset.at/js/script.js"></script>
+  <script src="js/script.js"></script>
 
 </body>
 
