--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/manucaralmo/GlowCookies@3.1.6/src/glowCookies.min.js"></script>
-  <script src="/node_modules/@creativebulma/bulma-collapsible/dist/js/bulma-collapsible.min.js"></script>
+  <script src="dataset.at/js/bulma-collapsible.min.js"></script>
 </head>
 <body>
   <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
@@ -281,7 +281,7 @@
       </div>
     </div>
   </section>
-  <script src="js/script.js"></script>
+  <script src="dataset.at/js/script.js"></script>
 
 </body>
 
