--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
   </section>
   <section class="section is-medium is-white has-text-centered">
     <div id="accordion_1" class="container is-max-desktop">
-      <a href="#collapsible-community-accordion" data-action="collapse" class="level is-radiusless pb-5">
+      <a href="#collapsible-community-accordion" data-action="collapse" class="level is-mobile is-radiusless pb-5">
         <div class="level-left">
           <div class="level-item">
-            <h2 class="title is-spaced is-size-2 is-size-3-mobile squeezed"><span class="gradient-text">Dataset</span> for community</h2>
+            <h2 class="title is-spaced is-size-2 is-size-4-mobile squeezed"><span class="gradient-text">Dataset</span> for community</h2>
           </div>
         </div>
         <div class="level-right">
@@ -165,16 +165,16 @@
             <h3 class="title is-spaced is-size-3 is-size-4-mobile squeezed">Curate, Share or access high quality datasets hosted by the global open-source community all-in-one place.</h3>
             <a class="button is-primary is-outlined early-access-button-bottom">Get early access for free</a>
           </div>
-          <div class="column">
+          <div class="column is-hidden-mobile">
             <img class="is-usecase-logo p-4" src="assets/icons/community-edition.png" alt="Community-edition">
           </div>
         </div>
       </div>
       
-      <a href="#collapsible-data-team-accordion" data-action="collapse" class="level is-radiusless pb-5 pt-5">
+      <a href="#collapsible-data-team-accordion" data-action="collapse" class="level is-mobile is-radiusless pb-5 pt-5">
         <div class="level-left">
           <div class="level-item">
-            <h2 class="title is-spaced is-size-2 is-size-3-mobile squeezed"><span class="gradient-text">Dataset</span> for teams</h2>
+            <h2 class="title is-spaced is-size-2 is-size-4-mobile squeezed"><span class="gradient-text">Dataset</span> for teams</h2>
           </div>
         </div>
         <div class="level-right">
@@ -189,15 +189,15 @@
           <h3 class="title is-spaced is-size-3 is-size-4-mobile squeezed">Spin up virtual workspaces and collaborate effortlessly with team members around any type of data projects with chat, documentation & more built in.</h3>
           <a class="button is-primary is-outlined" href="https://forms.gle/KtJvVTD4TKMFccWn6">Inquiry pro edition</a>
         </div>
-        <div class="column">
+        <div class="column is-hidden-mobile">
           <img class="is-usecase-logo p-4" src="assets/icons/team-edition.png" alt="Team-edition">
         </div>
       </div>
     </div>
-      <a href="#collapsible-enterprise-accordion" data-action="collapse" class="level is-radiusless pb-5 pt-5">
+      <a href="#collapsible-enterprise-accordion" data-action="collapse" class="level is-mobile is-radiusless pb-5 pt-5">
         <div class="level-left">
           <div class="level-item">
-            <h2 class="title is-spaced is-size-2 is-size-3-mobile squeezed"><span class="gradient-text">Dataset</span> for enterprise</h2>
+            <h2 class="title is-spaced is-size-2 is-size-4-mobile squeezed"><span class="gradient-text">Dataset</span> for enterprise</h2>
           </div>
         </div>
         <div class="level-right">
@@ -208,14 +208,14 @@
       </a>
       <div class="container is-collapsible"  id="collapsible-enterprise-accordion" data-parent="accordion_1" data-allow-multiple="true">
         <div class="columns is-vcentered mt-6 pb-6 mb-6 pt-6" >
-          <div class="column is-8 has-text-left">
+          <div class="column is-8 has-text-left has-text-centered-mobile">
             <h3 class="title is-spaced is-size-3 is-size-4-mobile squeezed">Create sample stores and central data repositories to help
               everyone find and access the data they need. Use all of your
               organization’s data without having to worry about data quality,
               compliance, or data governance ever again.</h3>
             <a class="button is-primary is-outlined" href="https://forms.gle/KtJvVTD4TKMFccWn6">Inquiry pro edition</a>
           </div>
-          <div class="column">
+          <div class="column is-hidden-mobile	">
             <img class="is-usecase-logo p-4" src="assets/icons/enterprise-edition.png" alt="Enterprise-edition">
           </div>
         </div>
