--- a/index.html
+++ b/index.html
@@ -92,10 +92,7 @@
       <div class="container is-max-desktop">
         <h3 class="is-size-3 is-size-4-mobile has-text-weight-bold mt-6 squeezed gradient-text">Collaboration</h3>
         <div class="container pt-3 pb-6"> <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Discuss, document and build</h4>
-          <p class="subtitle has-text-grey-dark is-size-6">Fast & easy dataset ingestion, automated data governance, a wide range of tools for documenting &
-            discussing the data with others, plus a direct line to data owners
-            through access request notifications, will set you and your team's
-            productivity on fire.</p>
+          <p class="subtitle has-text-grey-dark is-size-6">Fast, easy dataset ingestion. Automated data governance. A suite of tools for documentation and discussion, and a direct line to data owners. Set your team's productivity on fire.</p>
           </div>
             <img src="assets/images/data-workspace-1.png"  />               
       </div>
@@ -106,7 +103,7 @@
       <div class="container is-max-desktop">
         <h3 class="is-size-3 is-size-4-mobile has-text-weight-bold mt-6 squeezed gradient-text">Community</h3>
         <div class="container pt-3 pb-6"> <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Access 7000+ datasets</h4>
-          <p class="subtitle has-text-grey-dark is-size-6">One of the first endeavors has been to curate the best and most trusted datasets so data scientists can quickly discover them. Curate, share or access high quality datasets hosted by the global open-source community all in one place.</p>
+          <p class="subtitle has-text-grey-dark is-size-6">We have created a space for curating the best, most trusted datasets to enable quick discovery. Access, share and curate high quality datasets through our global open-source community.</p>
           </div>
             <img src="assets/images/community-data.svg"  />               
       </div>
@@ -115,31 +112,30 @@
   <section class="section is-medium is-white has-text-centered">
     <div class="container is-max-desktop">
        <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">...But that's not all!</h4>
-       <p class="subtitle has-text-grey-dark is-size-6">Dataset.at is packed with features that help you save time, and get data project moving at the speed of light ⚡</p>
+       <p class="subtitle has-text-grey-dark is-size-6">Dataset.at is feature-packed to save your time and move your projects forward at light speed. ⚡</p>
       <nav class="level is-justify-content-center mt-6">
         <div class="level-item features has-text-centered">
           <div>
               <img src="assets/images/shareable-link.png">
-            <p class="mt-4 has-text-grey-dark">Sharable, unique link for all datasets</p>
+            <p class="mt-4 has-text-grey-dark">Shareable, unique link for datasets</p>
           </div>
         </div>
         <div class="level-item features has-text-centered">
           <div>
             <img src="assets/images/automated-tags.png">
-            <p class="mt-4 has-text-grey-dark"">Meta-data enrichment & powerful search</p>
+            <p class="mt-4 has-text-grey-dark"">Metadata enrichment paired with powerful search</p>
           </div>
         </div>
         <div class="level-item features has-text-centered">
           <div>
               <img src="assets/images/automated-data-quality.png">
-            <p class="mt-4 has-text-grey-dark">Data Quality, Privacy & Utility Scores
-            </p>
+            <p class="mt-4 has-text-grey-dark">Data quality, privacy and utility scores</p>
           </div>
         </div>
         <div class="level-item features has-text-centered">
           <div>
               <img src="assets/images/privacy-feature.png">
-          <p class="mt-4 has-text-grey-dark"">Dataset privacy & wrangling studio, coming soon....</p>
+          <p class="mt-4 has-text-grey-dark"">Coming soon: Dataset privacy and wrangling studio</p>
           </div>
         </div>
       </nav>
@@ -187,7 +183,7 @@
         <div class="column is-8 has-text-left has-text-centered-mobile">
           <h3 class="title is-spaced is-size-3 is-size-4-mobile squeezed">Create sample stores and central data repositories to help
             everyone find and access the data they need. Use all of your
-            organization’s data without having to worry about data quality,
+            organization's data without having to worry about data quality,
             compliance, or data governance ever again.</h3>
           <a class="button is-primary is-outlined" href="https://forms.gle/KtJvVTD4TKMFccWn6">Inquiry pro edition</a>
         </div>
@@ -224,8 +220,8 @@
   <section class="hero is-small is-black has-text-centered">
     <div class="hero-body">
       <div class="container is-max-desktop">
-        <div class="container pt-6 pb-6"><h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Reserve your username before it's gone to claim your early community access</h4>
-          <p class="subtitle has-text-grey-light is-size-4 is-size-5-mobile">We are continously opening up new slots for our beta and upcoming community launch</p>
+        <div class="container pt-6 pb-6"><h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Reserve your spot before it's gone by claiming your username. Get early community access!</h4>
+          <p class="subtitle has-text-grey-light is-size-4 is-size-5-mobile">While we're continuously opening up new slots, space will be limited. Join today.</p>
      </div>
             <div class="pt-5 container"
             ><div class="field has-addons is-justify-content-center">
