--- a/index.html
+++ b/index.html
@@ -109,40 +109,46 @@
       </div>
   </div>  
   </section>
-  <section class="section is-medium is-white has-text-centered">
-    <div class="container is-max-desktop">
+  <section class="hero is-medium is-black has-text-centered">
+    <div class="hero-body">
+    <div class="container">
        <h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">...But that's not all!</h4>
-       <p class="subtitle has-text-grey-dark is-size-6">Dataset.at is feature-packed to save your time and move your projects forward at light speed. ⚡</p>
-      <nav class="level is-justify-content-center mt-6">
-        <div class="level-item features has-text-centered">
-          <div>
-              <img src="assets/images/shareable-link.png">
-            <p class="mt-4 has-text-grey-dark">Shareable, unique link for datasets</p>
+       <p class="subtitle has-text-grey-light is-size-6">Dataset.at is feature-packed to save your time and move your projects forward at light speed. ⚡</p>
+      <div class="columns has-text-left mt-6">
+        <div class="column features">
+          <div class="circle">
+            <span class="icon has-text-white is-size-4 is-size-5-mobile "><i class="fa fa-link"></i></span>
           </div>
+          <p class="mt-4 is-size-5 has-text-white has-text-weight-bold squeezed">Links</p>
+            <p class="mt-4 has-text-grey-light">Shareable, unique link for datasets</p>
         </div>
-        <div class="level-item features has-text-centered">
-          <div>
-            <img src="assets/images/automated-tags.png">
-            <p class="mt-4 has-text-grey-dark"">Metadata enrichment paired with powerful search</p>
+        <div class="column features">
+          <div class="circle">
+            <span class="icon has-text-white is-size-4 is-size-5-mobile "><i class="fa fa-search"></i></span>
           </div>
+          <p class="mt-4 is-size-5 has-text-white has-text-weight-bold squeezed">Metadata Enrichment</p>
+            <p class="mt-4 has-text-grey-light"">Metadata enrichment paired with powerful search</p>
         </div>
-        <div class="level-item features has-text-centered">
-          <div>
-              <img src="assets/images/automated-data-quality.png">
-            <p class="mt-4 has-text-grey-dark">Data quality, privacy and utility scores</p>
+        <div class="column features">
+          <div class="circle">
+            <span class="icon has-text-white is-size-4 is-size-5-mobile "><i class="fa fa-star"></i></span>
           </div>
+          <p class="mt-4 is-size-5 has-text-white has-text-weight-bold squeezed">Scoring</p>
+            <p class="mt-4 has-text-grey-light">Data quality, privacy and utility scores</p>
         </div>
-        <div class="level-item features has-text-centered">
-          <div>
-              <img src="assets/images/privacy-feature.png">
-          <p class="mt-4 has-text-grey-dark"">Coming soon: Dataset privacy and wrangling studio</p>
+        <div class="column features">
+          <div class="circle">
+            <span class="icon has-text-white is-size-4 is-size-5-mobile "><i class="fa fa-wrench"></i></span>
           </div>
+          <p class="mt-4 is-size-5 has-text-white has-text-weight-bold squeezed">Data Studio (Coming soon)</p>
+          <p class="mt-4 has-text-grey-light"">Dataset privacy and wrangling studio</p>
         </div>
-      </nav>
+      </div>
     </div>
+  </div>
   </section>
   <section class="section is-medium is-white has-text-centered">
-    <div id="accordion_1" class="container is-max-desktop">
+    <div id="accordion_1" class="container">
       <a href="#collapsible-data-team-accordion" data-action="collapse" class="level is-mobile is-radiusless pb-5">
         <div class="level-left">
           <div class="level-item">
@@ -180,7 +186,7 @@
     </a>
     <div class="container is-collapsible"  id="collapsible-enterprise-accordion" data-parent="accordion_1" data-allow-multiple="true">
       <div class="columns is-vcentered mt-6 pb-6 mb-6 pt-6" >
-        <div class="column is-8 has-text-left has-text-centered-mobile">
+        <div class="column is-8 has-text-left">
           <h3 class="title is-spaced is-size-3 is-size-4-mobile squeezed">Create sample stores and central data repositories to help
             everyone find and access the data they need. Use all of your
             organization's data without having to worry about data quality,
