--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   <section class="hero is-small is-black has-text-centered">
     <div class="hero-body">
       <div class="container is-max-desktop">
-        <div class="container pt-6 pb-6"><h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Reserve your spot in the community before it's gone by claiming your username.</h4>
+        <div class="container pt-6 pb-6"><h4 class="title is-spaced is-size-2 is-size-3-mobile squeezed">Reserve your spot in the community before it's gone by claiming your username</h4>
           <p class="subtitle has-text-grey-light is-size-4 is-size-5-mobile">While we're continuously opening up new slots, space will be limited. Join today.</p>
      </div>
             <div class="pt-5 container"
