--- a/index.html
+++ b/index.html
@@ -223,6 +223,11 @@
       </div>
     </div>
   </section>
+<section class="hero is-small is-black has-text-centered">
+  <div class="hero-body">
+    <div id="dib-recent-posts"></div>
+  </div>
+</section>
   <section class="hero is-small is-black has-text-centered">
     <div class="hero-body">
       <div class="container is-max-desktop">
@@ -283,7 +288,10 @@
     </div>
   </section>
   <script src="https://dataset.at/js/script.js"></script>
-
 </body>
-
+<script>
+  var dib_id = '570597ea-f454-4976-b814-328197de7e37';
+  var dib_recent_posts = 3;
+  </script>
+  <script src="https://io.dropinblog.com/js/embed.js"></script>
 </html>
