--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
       </div>
     </div>
   </section>
-<section class="hero is-small is-black has-text-centered">
+<section class="hero is-small has-text-centered">
   <div class="hero-body">
-    <div id="dib-recent-posts"></div>
+    <div id="dib-recent-post-list"></div>
   </div>
 </section>
   <section class="hero is-small is-black has-text-centered">
@@ -290,7 +290,7 @@
   <script src="https://dataset.at/js/script.js"></script>
   <script>
     var dib_id = '570597ea-f454-4976-b814-328197de7e37';
-    var dib_recent_posts = 3;
+    var dib_recent_post_list = 4;
     </script>
     <script src="https://io.dropinblog.com/js/embed.js"></script>
 </body>
