--- a/index.html
+++ b/index.html
@@ -223,9 +223,11 @@
       </div>
     </div>
   </section>
-<section class="hero is-small is-max-desktop has-text-centered">
+<section class="hero is-small has-text-centered">
   <div class="hero-body">
-    <div id="dib-recent-posts"></div>
+    <div class="container is-max-desktop">
+      <div id="dib-recent-posts"></div>
+    </div>
   </div>
 </section>
   <section class="hero is-small is-black has-text-centered">
