--- a/index.html
+++ b/index.html
@@ -119,28 +119,28 @@
           <div class="circle">
             <span class="icon has-text-white is-size-4 is-size-5-mobile "><i class="fa fa-link"></i></span>
           </div>
-          <p class="mt-4 is-size-5 has-text-white has-text-weight-bold squeezed">Links</p>
-            <p class="mt-4 has-text-grey-light">Shareable, unique link for datasets</p>
+          <p class="mt-4 is-size-5 has-text-white has-text-weight-bold squeezed">Unique link</p>
+            <p class="mt-4 has-text-grey-light">Each dataset gets a unique shareable link</p>
         </div>
         <div class="column features">
           <div class="circle">
             <span class="icon has-text-white is-size-4 is-size-5-mobile "><i class="fa fa-search"></i></span>
           </div>
-          <p class="mt-4 is-size-5 has-text-white has-text-weight-bold squeezed">Metadata Enrichment</p>
+          <p class="mt-4 is-size-5 has-text-white has-text-weight-bold squeezed">Auto-metadata</p>
             <p class="mt-4 has-text-grey-light"">Metadata enrichment paired with powerful search</p>
         </div>
         <div class="column features">
           <div class="circle">
             <span class="icon has-text-white is-size-4 is-size-5-mobile "><i class="fa fa-star"></i></span>
           </div>
-          <p class="mt-4 is-size-5 has-text-white has-text-weight-bold squeezed">Scoring</p>
-            <p class="mt-4 has-text-grey-light">Data quality, privacy and utility scores</p>
+          <p class="mt-4 is-size-5 has-text-white has-text-weight-bold squeezed">Dataset scores</p>
+            <p class="mt-4 has-text-grey-light">Calculated based on data quality, privacy and utility</p>
         </div>
         <div class="column features">
           <div class="circle">
             <span class="icon has-text-white is-size-4 is-size-5-mobile "><i class="fa fa-wrench"></i></span>
           </div>
-          <p class="mt-4 is-size-5 has-text-white has-text-weight-bold squeezed">Data Studio (Coming soon)</p>
+          <p class="mt-4 is-size-5 has-text-white has-text-weight-bold squeezed">Privacy studio (coming soon)</p>
           <p class="mt-4 has-text-grey-light"">Dataset privacy and wrangling studio</p>
         </div>
       </div>
