--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <div class="columns is-vcentered mt-6 pb-6 mb-6 pt-6" >
         <div class="column is-8 has-text-left">
           <h3 class="title is-spaced is-size-3 is-size-4-mobile squeezed">Spin up virtual workspaces and collaborate effortlessly with team members around any type of data projects with chat, documentation & more built in.</h3>
-          <a class="button is-primary is-outlined" href="https://forms.gle/KtJvVTD4TKMFccWn6">Inquiry pro edition</a>
+          <a class="button is-primary is-outlined" href="https://forms.gle/KtJvVTD4TKMFccWn6">Join pro edition waitlist</a>
         </div>
         <div class="column is-hidden-mobile">
           <img class="is-usecase-logo p-4" src="assets/icons/team-edition.png" alt="Team-edition">
@@ -191,7 +191,7 @@
             everyone find and access the data they need. Use all of your
             organization's data without having to worry about data quality,
             compliance, or data governance ever again.</h3>
-          <a class="button is-primary is-outlined" href="https://forms.gle/KtJvVTD4TKMFccWn6">Inquiry pro edition</a>
+          <a class="button is-primary is-outlined" href="https://forms.gle/KtJvVTD4TKMFccWn6">Join pro edition waitlist</a>
         </div>
         <div class="column is-hidden-mobile	">
           <img class="is-usecase-logo p-4" src="assets/icons/enterprise-edition.png" alt="Enterprise-edition">
